--- a/TestNGSelenium/test-output/index.html
+++ b/TestNGSelenium/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\parmod.kumar\AppData\Local\Temp\testng-eclipse-1818026743\testng-customsuite.xml</span>
+                    <span>C:\Users\parmod.kumar\AppData\Local\Temp\testng-eclipse--912747287\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,27 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="dataProviderTestNG.DataProviderInTestNG" hash-for-method="loginPageTest(ijkl@gmail.com, ijkl@123)">loginPageTest(ijkl@gmail.com, ijkl@123)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="dataProviderTestNG.DataProviderInTestNG" hash-for-method="loginPageTest(abcd@gmail.com, abcd@123)">loginPageTest(abcd@gmail.com, abcd@123)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="dataProviderTestNG.DataProviderInTestNG" hash-for-method="loginPageTest(efghk@gmail.com, efghk@123)">loginPageTest(efghk@gmail.com, efghk@123)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="dataProviderTestNG.DataProviderInTestNG" hash-for-method="loginPageTest(pqrst@gmail.com, pqrst@123)">loginPageTest(pqrst@gmail.com, pqrst@123)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="dataProviderTestNG.DataProviderInTestNG" hash-for-method="loginPageTest(xyz@gmail.com, xyz@123)">loginPageTest(xyz@gmail.com, xyz@123)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="src.demo.DemoGit" hash-for-method="test">test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -140,47 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">dataProviderTestNG.DataProviderInTestNG</span>
+              <span class="class-name">src.demo.DemoGit</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginPageTest(ijkl@gmail.com, ijkl@123)">
-                  </a> <!-- loginPageTest(ijkl@gmail.com, ijkl@123) -->
-                  <span class="method-name">loginPageTest</span>
-                  <span class="parameters">(ijkl@gmail.com, ijkl@123)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginPageTest(abcd@gmail.com, abcd@123)">
-                  </a> <!-- loginPageTest(abcd@gmail.com, abcd@123) -->
-                  <span class="method-name">loginPageTest</span>
-                  <span class="parameters">(abcd@gmail.com, abcd@123)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginPageTest(efghk@gmail.com, efghk@123)">
-                  </a> <!-- loginPageTest(efghk@gmail.com, efghk@123) -->
-                  <span class="method-name">loginPageTest</span>
-                  <span class="parameters">(efghk@gmail.com, efghk@123)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginPageTest(pqrst@gmail.com, pqrst@123)">
-                  </a> <!-- loginPageTest(pqrst@gmail.com, pqrst@123) -->
-                  <span class="method-name">loginPageTest</span>
-                  <span class="parameters">(pqrst@gmail.com, pqrst@123)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginPageTest(xyz@gmail.com, xyz@123)">
-                  </a> <!-- loginPageTest(xyz@gmail.com, xyz@123) -->
-                  <span class="method-name">loginPageTest</span>
-                  <span class="parameters">(xyz@gmail.com, xyz@123)</span>
+                  <a name="test">
+                  </a> <!-- test -->
+                  <span class="method-name">test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -188,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\parmod.kumar\AppData\Local\Temp\testng-eclipse-1818026743\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\parmod.kumar\AppData\Local\Temp\testng-eclipse--912747287\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -197,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;dataProviderTestNG.DataProviderInTestNG&quot;/&gt;
+      &lt;class name=&quot;src.demo.DemoGit&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -237,32 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginPageTest')
-data.setCell(0, 2, 'dataProviderTestNG.DataProviderInTestNG')
-data.setCell(0, 3, 416);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'loginPageTest')
-data.setCell(1, 2, 'dataProviderTestNG.DataProviderInTestNG')
-data.setCell(1, 3, 413);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'loginPageTest')
-data.setCell(2, 2, 'dataProviderTestNG.DataProviderInTestNG')
-data.setCell(2, 3, 394);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'loginPageTest')
-data.setCell(3, 2, 'dataProviderTestNG.DataProviderInTestNG')
-data.setCell(3, 3, 393);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'loginPageTest')
-data.setCell(4, 2, 'dataProviderTestNG.DataProviderInTestNG')
-data.setCell(4, 3, 382);
+data.setCell(0, 1, 'test')
+data.setCell(0, 2, 'src.demo.DemoGit')
+data.setCell(0, 3, 11);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 11 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -288,66 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">dataProviderTestNG.DataProviderInTestNG</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">src.demo.DemoGit</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">setup</span>
+                <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">loginPageTest(abcd@gmail.com, abcd@123)</span>
-                <span class="method-start">12947 ms</span>
+                <span class="method-name">test</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">13342 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setup</span>
-                <span class="method-start">14090 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">loginPageTest(xyz@gmail.com, xyz@123)</span>
-                <span class="method-start">25511 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">25894 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setup</span>
-                <span class="method-start">26732 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">loginPageTest(efghk@gmail.com, efghk@123)</span>
-                <span class="method-start">38541 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">38959 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setup</span>
-                <span class="method-start">39800 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">loginPageTest(pqrst@gmail.com, pqrst@123)</span>
-                <span class="method-start">50810 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">51205 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setup</span>
-                <span class="method-start">51963 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">loginPageTest(ijkl@gmail.com, ijkl@123)</span>
-                <span class="method-start">63357 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">63772 ms</span>
+                <span class="method-name">tearDown</span>
+                <span class="method-start">11 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
