--- a/TestNGSelenium/test-output/old/Default suite/methods-alphabetical.html
+++ b/TestNGSelenium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,34 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a48474">  <td>19/08/14 15:56:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderInTestNG.loginPageTest(java.lang.String, java.lang.String)[pri:0, instance:dataProviderTestNG.DataProviderInTestNG@6f7fd0e6]">loginPageTest</td> 
-  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/08/14 15:57:03</td>   <td>12564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderInTestNG.loginPageTest(java.lang.String, java.lang.String)[pri:0, instance:dataProviderTestNG.DataProviderInTestNG@6f7fd0e6]">loginPageTest</td> 
-  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/08/14 15:57:16</td>   <td>25594</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderInTestNG.loginPageTest(java.lang.String, java.lang.String)[pri:0, instance:dataProviderTestNG.DataProviderInTestNG@6f7fd0e6]">loginPageTest</td> 
-  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/08/14 15:57:28</td>   <td>37863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderInTestNG.loginPageTest(java.lang.String, java.lang.String)[pri:0, instance:dataProviderTestNG.DataProviderInTestNG@6f7fd0e6]">loginPageTest</td> 
-  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/08/14 15:57:41</td>   <td>50410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderInTestNG.loginPageTest(java.lang.String, java.lang.String)[pri:0, instance:dataProviderTestNG.DataProviderInTestNG@6f7fd0e6]">loginPageTest</td> 
-  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/08/14 15:56:38</td>   <td>-12946</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProviderInTestNG.setup()[pri:0, instance:dataProviderTestNG.DataProviderInTestNG@6f7fd0e6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/08/14 15:56:52</td>   <td>1143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProviderInTestNG.setup()[pri:0, instance:dataProviderTestNG.DataProviderInTestNG@6f7fd0e6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/08/14 15:57:04</td>   <td>13785</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProviderInTestNG.setup()[pri:0, instance:dataProviderTestNG.DataProviderInTestNG@6f7fd0e6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/08/14 15:57:17</td>   <td>26853</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProviderInTestNG.setup()[pri:0, instance:dataProviderTestNG.DataProviderInTestNG@6f7fd0e6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/08/14 15:57:30</td>   <td>39016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProviderInTestNG.setup()[pri:0, instance:dataProviderTestNG.DataProviderInTestNG@6f7fd0e6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/08/14 15:56:51</td>   <td>395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProviderInTestNG.teardown()[pri:0, instance:dataProviderTestNG.DataProviderInTestNG@6f7fd0e6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/08/14 15:57:04</td>   <td>12948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProviderInTestNG.teardown()[pri:0, instance:dataProviderTestNG.DataProviderInTestNG@6f7fd0e6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/08/14 15:57:17</td>   <td>26012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProviderInTestNG.teardown()[pri:0, instance:dataProviderTestNG.DataProviderInTestNG@6f7fd0e6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/08/14 15:57:29</td>   <td>38259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProviderInTestNG.teardown()[pri:0, instance:dataProviderTestNG.DataProviderInTestNG@6f7fd0e6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/08/14 15:57:41</td>   <td>50825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProviderInTestNG.teardown()[pri:0, instance:dataProviderTestNG.DataProviderInTestNG@6f7fd0e6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>19/08/15 19:18:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DemoGit.setUp()[pri:0, instance:src.demo.DemoGit@4501b7af]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1164371389</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>19/08/15 19:18:27</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DemoGit.tearDown()[pri:0, instance:src.demo.DemoGit@4501b7af]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1164371389</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>19/08/15 19:18:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoGit.test()[pri:0, instance:src.demo.DemoGit@4501b7af]">test</td> 
+  <td>main@1164371389</td>   <td></td> </tr>
 </table>
